@@ -13,6 +13,12 @@
 				<a href="#ReleaseNotesforSirius">Release Notes for Sirius</a>
 				<ol style="list-style: disc;">
 					<li>
+						<a href="#sirius7.0.0">Changes in Sirius 7.0.0</a>
+					</li>
+					<li>
+						<a href="#sirius6.6.0">Changes in Sirius 6.6.0</a>
+					</li>
+					<li>
 						<a href="#sirius6.5.0">Changes in Sirius 6.5.0</a>
 						<ol style="list-style: disc;">
 							<li>
@@ -157,6 +163,8 @@
 		<p>This document contains the release notes for recent major releases of Sirius. See also 
 			<a href="Release_Notes_Previous.html">the release notes from previous versions</a> for details about older releases.
 		</p>
+		<h2 id="sirius7.0.0">Changes in Sirius 7.0.0</h2>
+		<h2 id="sirius6.6.0">Changes in Sirius 6.6.0</h2>
 		<h2 id="sirius6.5.0">Changes in Sirius 6.5.0</h2>
 		<h3 id="UserVisibleChanges">User-Visible Changes</h3>
 		<ul>
